##                                               -*- Autoconf -*-
## Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([PROJECT], [0.0.1], [your@email.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
## Uncomment if building libraries
#AC_CONFIG_MACRO_DIRS([m4])
#m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
#LT_INIT 
AC_PROG_CC #This chooses the project's language'

# Checks for programs.
AC_PROG_CC

# Checks for needed header files.
AC_CHECK_HEADERS([header1.h header2.h])

# Checks for needed library functions.
AC_CHECK_FUNCS([function1 function2])

# Point to makefiles
AC_CONFIG_FILES([Makefile src/xxxx/Makefile])

AC_OUTPUT

